--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.1",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
