--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/divider": "^2.0.32",
+    "@nextui-org/image": "^2.0.32",
+    "@nextui-org/kbd": "^2.0.34",
+    "@nextui-org/modal": "^2.0.41",
     "@nextui-org/react": "^2.4.8",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.1",
@@ -19,7 +25,9 @@
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
